--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,4 +26,4 @@ jobs:
         USER: ubuntu
         PORT: 22
       run: |
-        ssh -o StrictHostKeyChecking=no -i deploy_key -p $PORT $USER@$HOST /opt/etc/dockers/DariaKorchakovska/diploma/update.sh
+        ssh -o StrictHostKeyChecking=no -i deploy_key -p 22 ubuntu@129.159.41.235 /opt/etc/dockers/DariaKorchakovska/diploma/update.sh
