--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,11 +14,9 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Install SSH key
-      uses: shimataro/ssh-key-action@v2
+      uses: webfactory/ssh-agent@v0.5.3
       with:
-        key: ${{ secrets.DEPLOY_KEY }}
-        name: deploy_key
-        known_hosts: github.com
+        ssh-private-key: ${{ secrets.DEPLOY_KEY }}
 
     - name: Deploy to Server
       env:
