--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,22 +5,22 @@ services:
     build: .
     container_name: django_app
     ports:
-      - "8001:8000"
+      - "8000:8000"
     volumes:
       - ./data:/app/data
       - ./staticfiles:/app/staticfiles
     command: gunicorn --log-level info --workers 3 --timeout 1200 --bind :8000 exp_d.wsgi:application
 
-  nginx:
-    image: nginx:latest
-    container_name: nginx
-    ports:
-      - "8000:8000"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-      - ./staticfiles:/app/staticfiles
-    depends_on:
-      - web
+#  nginx:
+#    image: nginx:latest
+#    container_name: nginx
+#    ports:
+#      - "8000:80"
+#    volumes:
+#      - ./nginx.conf:/etc/nginx/nginx.conf
+#      - ./staticfiles:/app/staticfiles
+#    depends_on:
+#      - web
 
 volumes:
   app:
