--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ asgiref==3.8.1
 billiard==4.2.0
 celery==5.4.0
 certifi==2024.2.2
+chardet==5.2.0
 charset-normalizer==3.3.2
 click==8.1.7
 click-didyoumean==0.3.1
@@ -14,9 +15,11 @@ gunicorn==22.0.0
 idna==3.7
 kombu==5.3.7
 packaging==24.0
+pillow==10.3.0
 prompt-toolkit==3.0.43
 python-dateutil==2.9.0.post0
 redis==5.0.4
+reportlab==4.2.0
 requests==2.31.0
 six==1.16.0
 sqlparse==0.5.0
